# relay

./: .gitignore  Cargo.toml  DECISIONS.md  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
Formula/: relay.rb
crates/relay-acme/: Cargo.toml
crates/relay-acme/src/: encrypt.rs  http01.rs  issue.rs  lib.rs  renewal.rs  resolver.rs  store.rs
crates/relay-cli/: Cargo.toml
crates/relay-cli/src/: client.rs  commands.rs  config.rs  lib.rs  main.rs  tls.rs  ui.rs
crates/relay-control/: Cargo.toml  build.rs
crates/relay-control/assets/: app.css  app.js  captures.js
crates/relay-control/src/: auth.rs  cert_issuer.rs  config.rs  edge_bridge.rs  events.rs  icons.rs  lib.rs  routes.rs  state.rs  templates.rs  verify.rs
crates/relay-control/templates/: _capture_panel.html  _captures_list.html  base.html  capture.html  capture_panel.html  cli_authorize.html  domains.html  home.html  login.html  reservations.html  tokens.html  tunnel.html
crates/relay-db/: Cargo.toml
crates/relay-db/src/: lib.rs  models.rs  sqlite.rs
crates/relay-db/src/backend/: mod.rs  postgres.rs  sqlite.rs
crates/relay-db/tests/: migrations_and_crud.rs  postgres_parity.rs
crates/relay-db/tests/common/: mod.rs
crates/relay-dns/: Cargo.toml
crates/relay-dns/src/: cloudflare.rs  lib.rs  rfc2136.rs  route53.rs
crates/relay-edge/: Cargo.toml
crates/relay-edge/src/: auth.rs  config.rs  hostnames.rs  ingress.rs  ingress_https.rs  lib.rs  quic.rs  registry.rs  tcp.rs  tls.rs  wordlists.rs
crates/relay-edge/tests/: e2e_http.rs  e2e_ws.rs
crates/relay-proto/: Cargo.toml
crates/relay-proto/src/: lib.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: main.rs
docs/: architecture.md  deploy-digitalocean.md  protocol.md  releasing.md  self-hosting.md
infra/digitalocean/: README.md  cloud-init.yaml.tftpl  relayd.toml.tftpl  remote-update.sh  update.sh
infra/digitalocean/terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/docker/: Dockerfile  docker-compose.yml  relayd.toml.example
infra/helm/: README.md
infra/systemd/: relayd.service
migrations/: 20260418000001_tunnels_natural_key.sql
migrations/postgres/: 20260417000001_init.sql  20260418000001_tunnels_natural_key.sql  20260418000003_custom_domain_wildcard.sql
migrations/sqlite/: 20260417000001_init.sql  20260418000002_capture_client_ip.sql  20260418000003_custom_domain_wildcard.sql
scripts/: install.sh
website/: .gitignore  README.md  astro.config.mjs  package.json  wrangler.jsonc
website/src/components/: CodeBlock.astro  Footer.astro  Header.astro  ThemeToggle.astro
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro
website/src/styles/: global.css
