[package]
name = "relay-acme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ACME client + cert store for relay (DNS-01 wildcard, HTTP-01 custom domains)."

[dependencies]
instant-acme.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
time.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
base64.workspace = true
aes-gcm-siv.workspace = true
rand.workspace = true
relay-dns = { path = "../relay-dns" }
relay-db = { path = "../relay-db" }
