[package]
name = "relay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The `relay` CLI — exposes a local port through a relayd server."

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
webpki-roots = "0.26"
webbrowser = "1"
hyper.workspace = true
hyper-util.workspace = true
rand.workspace = true
form_urlencoded = "1"
clap.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures.workspace = true
bytes.workspace = true
reqwest.workspace = true
httparse.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
http.workspace = true
relay-proto = { path = "../relay-proto" }
