[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The `relayd` server binary — wires the edge and control plane into one process."

[[bin]]
name = "relayd"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
rand.workspace = true
relay-edge = { path = "../relay-edge" }
relay-control = { path = "../relay-control" }
relay-db = { path = "../relay-db" }
relay-acme = { path = "../relay-acme" }
relay-dns = { path = "../relay-dns" }
rustls.workspace = true
